--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            padding-bottom: 80px; /* 防止页脚覆盖内容 */
         }
         header {
             background-color: #2c3e50;
@@ -48,6 +49,21 @@
             position: fixed;
             width: 100%;
             bottom: 0;
+            box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
+        }
+        footer a {
+            color: #3498db;
+            text-decoration: none;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
+        /* 响应式调整 */
+        @media (max-width: 600px) {
+            a.button {
+                padding: 10px 20px;
+                font-size: 16px;
+            }
         }
     </style>
 </head>
@@ -71,15 +87,22 @@
                 <li>持续更新和优化，提升用户体验</li>
             </ul>
         </section>
-        <section>
+        <section id="start">
             <h2>立即开始使用</h2>
             <p>点击下方按钮，立即体验ChatGPT中文版的强大功能：</p>
-            <a href="https://www.pftedu.com/385.html" class="button">开始使用ChatGPT</a>
+            <!-- 如果按钮要滚动到页面内的某个部分，可以使用锚点链接。例如，假设有一个输入框的id是"chat" -->
+            <!-- <a href="#chat" class="button">开始使用ChatGPT</a> -->
+            <!-- 如果按钮要跳转到外部页面，请确保链接正确 -->
+            <a href="https://www.pftedu.com/chat.html" class="button">开始使用ChatGPT</a>
         </section>
+        <!-- 其他内容可以在这里添加 -->
     </main>
     <footer>
         <p>&copy; 2024 ChatGPTZHonline. 保留所有权利。</p>
-        <p>联系邮箱：support@ChatGPTZHonline.com | 网站：[www.ChatGPTZHonline.com](https://www.pftedu.com/385.html)</p>
+        <p>
+            联系邮箱：<a href="mailto:support@ChatGPTZHonline.com">support@ChatGPTZHonline.com</a> | 
+            网站：<a href="https://www.ChatGPTZHonline.com">www.ChatGPTZHonline.com</a>
+        </p>
     </footer>
 </body>
 </html>
