--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <!-- 如果按钮要滚动到页面内的某个部分，可以使用锚点链接。例如，假设有一个输入框的id是"chat" -->
             <!-- <a href="#chat" class="button">开始使用ChatGPT</a> -->
             <!-- 如果按钮要跳转到外部页面，请确保链接正确 -->
-            <a href="https://www.pftedu.com/chat.html" class="button">开始使用ChatGPT</a>
+            <a href="https://www.pftedu.com/385.html" class="button">开始使用ChatGPT</a>
         </section>
         <!-- 其他内容可以在这里添加 -->
     </main>
@@ -101,7 +101,7 @@
         <p>&copy; 2024 ChatGPTZHonline. 保留所有权利。</p>
         <p>
             联系邮箱：<a href="mailto:support@ChatGPTZHonline.com">support@ChatGPTZHonline.com</a> | 
-            网站：<a href="https://www.ChatGPTZHonline.com">www.ChatGPTZHonline.com</a>
+            网站：<a href="https://www.ChatGPTZHonline.com">https://www.pftedu.com/385.html</a>
         </p>
     </footer>
 </body>
